--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.24",
+    "graphql-request": "^6.1.0",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
     "react": "^18",
+    "react-datocms": "^6.0.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
