--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.24",
     "graphql-request": "^6.1.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
     "react": "^18",
