--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tabler/icons-react": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.0.24",
     "graphql-request": "^6.1.0",
     "lottie-react": "^2.4.0",
