--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
     "react": "^18",
+    "react-animated-numbers": "^0.18.0",
     "react-datocms": "^6.0.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
