--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tabler/icons-react": "^3.1.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "embla-carousel-react": "^8.0.2",
-    "framer-motion": "^11.0.24",
+    "framer-motion": "^11.1.7",
     "graphql-request": "^6.1.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.364.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.4",
     "react": "^18",
     "react-animated-numbers": "^0.18.0",
@@ -27,7 +28,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-type-animation": "^3.2.0",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
